# ChromimuAndroid

./: args.gn  build.gradle  chromium-android-build.markdown  cleanbuild.sh  config.gradle  defaultconfig.txt  getlog.sh  readme.txt  run.sh  settings.gradle  uninstall.sh
origin-build/Default/: args.gn
origin-build/Release/: args.gn  build_vars.txt  readme.txt
origin-build/Release/apks/: ChromiumNetTestSupport.apk
origin-build/Release/cronet/jars/cronet_api/sources/org/chromium/net/: ApiVersion.java  BidirectionalStream.java  CallbackException.java  CronetEngine.java  CronetException.java  CronetProvider.java  ExperimentalBidirectionalStream.java  ExperimentalCronetEngine.java  ExperimentalUrlRequest.java  ICronetEngineBuilder.java  NetworkException.java  NetworkQualityRttListener.java  NetworkQualityThroughputListener.java  QuicException.java  RequestFinishedInfo.java  UploadDataProvider.java  UploadDataProviders.java  UploadDataSink.java  UrlRequest.java  UrlResponseInfo.java
origin-build/Release/cronet/jars/cronet_impl_common_java/sources/org/chromium/net/: EffectiveConnectionType.java  RttThroughputValues.java
origin-build/Release/cronet/jars/cronet_impl_native_java/sources/org/chromium/base/: ActivityState.java  AnimationFrameTimeHistogram.java  ApiCompatibilityUtils.java  ApkAssets.java  ApplicationState.java  ApplicationStatus.java  BaseChromiumApplication.java  BaseSwitches.java  BuildConfig.java  BuildInfo.java  Callback.java  CollectionUtil.java  CommandLine.java  CommandLineInitUtil.java  ContentUriUtils.java  ContextUtils.java  CpuFeatures.java  DiscardableReferencePool.java  EarlyTraceEvent.java  EventLog.java  FieldTrialList.java  FileUtils.java  ImportantFileWriterAndroid.java  JNIUtils.java  JavaExceptionReporter.java  JavaHandlerThread.java  LocaleUtils.java  Log.java  MemoryPressureListener.java  NonThreadSafe.java  ObserverList.java  PackageUtils.java  PathService.java  PathUtils.java  PowerMonitor.java  Promise.java  ResourceExtractor.java  SecureRandomInitializer.java  StreamUtil.java  StrictModeContext.java  (+9 more)
origin-build/Release/cronet/jars/cronet_impl_native_java/sources/org/chromium/net/: AndroidCellularSignalStrength.java  (+20 more)
origin-build/Release/cronet/javadoc/: navtree_data.js
origin-build/Release/cronet/javadoc/reference/: hierarchy.html  lists.js  packages.html
origin-build/Release/cronet/javadoc/reference/org/chromium/net/: CronetEngine.Builder.LibraryLoader.html  CronetEngine.Builder.html  CronetException.html  InlineExecutionProhibitedException.html  QuicException.html  UploadDataProvider.html  UploadDataProviders.html  UploadDataSink.html  UrlRequest.Builder.html  UrlRequest.StatusListener.html  UrlRequest.html  UrlResponseInfo.html  package-summary.html
(+163 files in other folders)
