use_errorprone_java_compiler = true
arm_use_neon = false
target_os = "android"
enable_websockets = false
disable_file_support = true
disable_ftp_support = true
disable_brotli_filter = false
use_platform_icu_alternatives = true
enable_reporting = false
is_component_build = false
ignore_elf32_limitations = true
use_partition_alloc = false
include_transport_security_state_preload_list = false
is_debug = false
is_official_build = true
android_ndk_root = "/home/malin/ndk/android-ndk-r12b"
android_ndk_version = "r12b"
android_sdk_root = "/home/malin/sdk"
android_sdk_platform_version = "27"
android_sdk_build_tools_version = "27.0.3"
